<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="60dp"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:background="@drawable/blue_background" >
	    <TextView
	        android:id="@+id/mylabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:background="@drawable/blue_background"
	        android:textSize="24dp"
	        android:textStyle="bold"
		    android:textColor="#ffffff"
		    android:shadowColor="#aaaaaa"
		    android:shadowDx="1"
		    android:shadowDy="1"
		    android:shadowRadius="1"
	        android:text="@string/app_name" />
	 </LinearLayout>
	 
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:background="#84cbe1" >
	    <LinearLayout
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        <ImageButton
		        android:id="@+id/flagicon"
		        android:src="@drawable/flagbutton"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:layout_gravity="center"
		        android:layout_margin="15dp" />
			<TextView
				android:id="@+id/flaglabel"
		        android:layout_width="110dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:gravity="center"
		        android:text="@string/navigate" />
	    </LinearLayout>
	    <LinearLayout
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	         <ImageButton
		        android:id="@+id/infoicon"
		        android:src="@drawable/infobutton"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:layout_gravity="center"
		        android:layout_margin="15dp" />
			<TextView
				android:id="@+id/infolabel"
		        android:layout_width="110dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:gravity="center"
		        android:text="@string/guide" />
	    </LinearLayout>
	</LinearLayout>
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:background="#84cbe1" >
	    <LinearLayout
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        <ImageButton
		        android:id="@+id/engineicon"
		        android:src="@drawable/enginebutton"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:layout_gravity="center"
		        android:layout_margin="15dp" />
			<TextView
				android:id="@+id/settingslabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:text="@string/settings" />
	    </LinearLayout>
	    <LinearLayout
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	         <ImageButton
		        android:id="@+id/closeicon"
		        android:src="@drawable/closebutton"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:layout_gravity="center"
		        android:layout_margin="15dp" />
			<TextView
				android:id="@+id/closelabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:text="@string/exit" />
	    </LinearLayout>
	</LinearLayout>
	    <LinearLayout
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	    	android:background="#84cbe1" >
			<TextView
				android:id="@+id/creditslabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="14dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:text="@string/app_credits" />
	 </LinearLayout>

</LinearLayout>