<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="60dp"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:background="@drawable/blue_background" >
	    <TextView
	        android:id="@+id/guidetitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:background="@drawable/blue_background"
	        android:textSize="24dp"
	        android:textStyle="bold"
		    android:textColor="#ffffff"
		    android:shadowColor="#aaaaaa"
		    android:shadowDx="1"
		    android:shadowDy="1"
		    android:shadowRadius="1"
	        android:text="@string/guide_title" />
	 </LinearLayout>
	 
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:background="#84cbe1" >
	    <TextView
	        android:id="@+id/step1title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textSize="18dp"
	        android:textStyle="bold"
		    android:textColor="#ffffff"
		    android:shadowColor="#aaaaaa"
		    android:shadowDx="1"
		    android:shadowDy="1"
		    android:shadowRadius="1"
	        android:text="Step 1" />
		<TextView
	        android:id="@+id/step1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="16dp"
		    android:textColor="#ffffff"
		    android:shadowColor="#aaaaaa"
		    android:shadowDx="1"
		    android:shadowDy="1"
		    android:shadowRadius="1"
	        android:text="@string/step1" />
		<TextView
	        android:id="@+id/step2title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textSize="18dp"
	        android:textStyle="bold"
		    android:textColor="#ffffff"
		    android:shadowColor="#aaaaaa"
		    android:shadowDx="1"
		    android:shadowDy="1"
		    android:shadowRadius="1"
	        android:text="Step 2" />
		<TextView
	        android:id="@+id/step2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="16dp"
		    android:textColor="#ffffff"
		    android:shadowColor="#aaaaaa"
		    android:shadowDx="1"
		    android:shadowDy="1"
		    android:shadowRadius="1"
	        android:text="@string/step2" />
		<TextView
	        android:id="@+id/step3title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:textSize="18dp"
	        android:textStyle="bold"
		    android:textColor="#ffffff"
		    android:shadowColor="#aaaaaa"
		    android:shadowDx="1"
		    android:shadowDy="1"
		    android:shadowRadius="1"
	        android:text="Step 3" />
		<TextView
	        android:id="@+id/step3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:textSize="16dp"
		    android:textColor="#ffffff"
		    android:shadowColor="#aaaaaa"
		    android:shadowDx="1"
		    android:shadowDy="1"
		    android:shadowRadius="1"
	        android:text="@string/step3" />
	 </LinearLayout>
</LinearLayout>