<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:gravity="center"
	    android:background="@drawable/blue_background" >
        		<TextView
				android:id="@+id/destinationlabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="24dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:gravity="center"
		        android:text="@string/destination" />
        		<TextView
				android:id="@+id/destinationnamelabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="20dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:gravity="center" />
    </LinearLayout>
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="center"
		android:background="#84cbe1" >
    	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:gravity="center"
		    android:background="#84cbe1" >
		    <TextView
				android:id="@+id/eyelabel"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="20dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:gravity="center"
		        android:text="@string/read_code" />
	        <ImageButton
		        android:id="@+id/eyeicon"
		        android:src="@drawable/eyebutton"
		        android:layout_width="100dp"
		        android:layout_height="100dp"
		        android:layout_gravity="center"
		        android:layout_margin="15dp" />
	    </LinearLayout>
     	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_gravity="center"
		    android:background="#84cbe1" >
    	    <TextView
				android:id="@+id/zxingcreditslabel"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="bottom"
		        android:padding="20dp"
		        android:textSize="16dp"
		        android:textColor="#ffffff"
		        android:shadowColor="#aaaaaa"
		        android:shadowDx="1"
		        android:shadowDy="1"
		        android:shadowRadius="1"
		        android:gravity="center"
		        android:text="@string/zxing_credits" />
    	</LinearLayout>
    </LinearLayout>

</LinearLayout>